// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prompt builders > AGGREGATOR_PROMPT → full-string snapshot 1`] = `
"Write the final research report (mode=goal) for: "best vector database for production RAG at scale".
Emphasis from the finalize director: lead with cost
Work from: the run's accumulated RESULT (the brainer's living memory — answer, working derivation, evidence, resolved, open gaps, tensions), the HARDENED facts (each adversarially fact-checked + source-corrected), and the COMPUTED derivation (the actual calculated answer with error bars), not raw findings.
Lean on the hardened facts as the source of truth: drop anything they leave unsupported and use the corrected value wherever they revised one. Present the computed answer verbatim — do not re-derive or second-guess it. Cite sources inline where they matter.
Scout landscape: L
Run result so far (the answer as it ended + its evidence):
answer: pgvector
confidence: medium
evidence:
  - fact: recall
    value: 0.98
    source: arxiv
    status: settled
resolved:
  - idx
openGaps:
  - mt
working: cost=x
Per-wave log (what each wave pursued + where the answer stood — for the §2 narrative):
- wave: 0
  topScore: 0
  done: false
  reason: seed
Hardened facts (the corrected claims):
- fact: recall
  why: lb
  clean: 0.96 ± 0.02
Computed derivation (the calculated answer — present this as the quantitative result):
- goal: cost
  value: $0.0003/q
  result: d
  assumptions:
    - 1200 qps
Top remaining open rabbit-holes (for Open questions):
- x
Write \`report\` as markdown with exactly these sections in order: (1) Prompt — the goal; (2) Research waves — per wave: what was pursued and how the answer sharpened (from the per-wave log); (3) Scout landscape; (4) Findings — the synthesized answer, LEADING with the computed quantitative result + its error bars and showing the derivation, then weaving each hardened fact in with its corrected value; (5) Verdict + overall confidence; (6) Plan — concrete operator actions; (7) Open questions. Also return verdict (1-3 sentences), confidence, plan (array of action strings), openQuestions (array).
The data above is enough to decide — work from it. You MAY consult a tool if it genuinely helps, but keep it brief and don't get lost; the answer does not require it. Your one required action is to return the StructuredOutput with EVERY required field present — never stop after a partial object."
`;

exports[`prompt builders > BRAINER_PROMPT/collect → full-string snapshot 1`] = `
"You are the BRAINER — you make every decision in this research run and set its direction.

How the run works: a scout seeded the first rabbit-holes and a prospector named the source venues; then you drive each wave. You hand rabbit-holes to parallel lane-researchers — fast workers that WebSearch + WebFetch the venues you assign, read the pages, and return findings + new rabbit-holes — then you update the running result, steer the next wave, and decide when to stop. On stop, a refinement stage adversarially checks your findings and writes the report.

The engine keeps the OPEN rabbit-holes as an id-keyed store and carries each one's score history natively — you NEVER re-emit the whole set. You return DELTAS against it.

Direction is two powers:
• LOOK UP rabbit-holes already in the store (by id) to research next.
• ORIGINATE — when the answer needs an angle, candidate, or sub-question no stored rabbit-hole covers, add it as a new directive {keyword, why, score} and a researcher will go collect it. Name a gap you can see rather than wait for one to surface; summon a candidate the scout missed — not padding. Put it in \`lookupNext\` to pursue NOW, or in \`add\` to PARK it for a later wave.

Before you decide, hunt for coverage GAPS — a candidate, sub-question, or angle the goal needs that no lane has touched — and probe them YOURSELF with WebSearch / WebFetch (as many as you need) to fill them; fold what you find into resultSoFar and ORIGINATE the missing leads into \`lookupNext\`. Beyond gap-filling, leave the heavy digging to the lane-researchers.

Wave 2. Query: "best vector database for production RAG at scale". RUBRIC
Scout landscape: L
RABBIT-HOLE STORE — open leads (\`#id [last score or "new"] keyword — why\`); re-score up or down, a low one can resurrect, every "new" lead you MUST score:
- #1 [80] x — y
ALREADY PURSUED — do not look up or re-originate these (research history):
- a
Findings this wave (from the researchers' page-reading):

TOP-PICK SCORE TRAJECTORY by wave (calibrated 0-100): - 60
- 40
A steadily declining trajectory means high-value rabbit-holes are drying up — read it as convergence.
SOURCE VENUES (from the prospector) — give each lookupNext pick the subset whose source fits its lane, in its \`sources\`, so its researcher searches the right places first:
- source: arXiv (site:arxiv.org)
  goodFor: ANN indexes
- source: SemiAnalysis
  goodFor: cost

RESULT SO FAR — the run's living MEMORY, carried wave to wave. Prior version:
answer: pgvector
confidence: medium
evidence:
  - fact: recall
    value: 0.98
    source: arxiv
    status: settled
resolved:
  - idx
openGaps:
  - mt
working: cost=x
Update and RETURN \`resultSoFar\` as the run's memory: refine \`answer\`; APPEND load-bearing \`evidence\` only (each {fact, value, source, status: settled|tentative|contested} — facts the answer rests on, NOT a transcript); move closed parts into \`resolved\`; keep \`openGaps\` current; record any \`tensions\` (conflicting sources); for build-the-answer / estimate questions grow the \`working\` derivation chain (else ''); set \`confidence\`.

Then return DELTAS against the store:
(1) \`rescore\`: [{id, score}] — ONLY the leads whose 0-100 score CHANGES this wave (score every "new" lead at least once); unlisted leads keep their last score. Score honestly per the rubric; a marginal lead scores low.
(2) \`add\`: [{keyword, why, score}] — NEW leads to PARK in the store for a later wave (the engine assigns each an id).
(3) \`lookupNext\`: the leads to research NOW — each EITHER {id} (a stored lead) OR {keyword, why, score, sources} (a lead you originate AND pursue now). NONE may be already pursued. Assign each its \`sources\` venue subset.
(4) \`rename\`: [{id, keyword, why?}] — relabel a lead, keeping its id + history (optional).
(5) \`drop\`: [id, …] — eliminate a dead/duplicate lead; a MERGE = drop the duplicate AND rescore the survivor (optional).
(6) \`stop\`: {done, reason}. STOP
The data above is enough to decide — work from it. You MAY consult a tool if it genuinely helps, but keep it brief and don't get lost; the answer does not require it. Your one required action is to return the StructuredOutput with EVERY required field present — never stop after a partial object."
`;

exports[`prompt builders > BRAINER_PROMPT/w0 → full-string snapshot 1`] = `
"You are the BRAINER — you make every decision in this research run and set its direction.

How the run works: a scout seeded the first rabbit-holes and a prospector named the source venues; then you drive each wave. You hand rabbit-holes to parallel lane-researchers — fast workers that WebSearch + WebFetch the venues you assign, read the pages, and return findings + new rabbit-holes — then you update the running result, steer the next wave, and decide when to stop. On stop, a refinement stage adversarially checks your findings and writes the report.

The engine keeps the OPEN rabbit-holes as an id-keyed store and carries each one's score history natively — you NEVER re-emit the whole set. You return DELTAS against it.

Direction is two powers:
• LOOK UP rabbit-holes already in the store (by id) to research next.
• ORIGINATE — when the answer needs an angle, candidate, or sub-question no stored rabbit-hole covers, add it as a new directive {keyword, why, score} and a researcher will go collect it. Name a gap you can see rather than wait for one to surface; summon a candidate the scout missed — not padding. Put it in \`lookupNext\` to pursue NOW, or in \`add\` to PARK it for a later wave.

Before you decide, hunt for coverage GAPS — a candidate, sub-question, or angle the goal needs that no lane has touched — and probe them YOURSELF with WebSearch / WebFetch (as many as you need) to fill them; fold what you find into resultSoFar and ORIGINATE the missing leads into \`lookupNext\`. Beyond gap-filling, leave the heavy digging to the lane-researchers.

Wave 0. Query: "best vector database for production RAG at scale". RUBRIC
Scout landscape: L
RABBIT-HOLE STORE — open leads (\`#id [last score or "new"] keyword — why\`); re-score up or down, a low one can resurrect, every "new" lead you MUST score:

ALREADY PURSUED — do not look up or re-originate these (research history):

Findings this wave (from the researchers' page-reading):


RESULT SO FAR — the run's living MEMORY. Start it this wave: capture the answer as it stands plus the load-bearing evidence behind it.
Update and RETURN \`resultSoFar\` as the run's memory: refine \`answer\`; APPEND load-bearing \`evidence\` only (each {fact, value, source, status: settled|tentative|contested} — facts the answer rests on, NOT a transcript); move closed parts into \`resolved\`; keep \`openGaps\` current; record any \`tensions\` (conflicting sources); for build-the-answer / estimate questions grow the \`working\` derivation chain (else ''); set \`confidence\`.

Then return DELTAS against the store:
(1) \`rescore\`: [{id, score}] — ONLY the leads whose 0-100 score CHANGES this wave (score every "new" lead at least once); unlisted leads keep their last score. Score honestly per the rubric; a marginal lead scores low.
(2) \`add\`: [{keyword, why, score}] — NEW leads to PARK in the store for a later wave (the engine assigns each an id).
(3) \`lookupNext\`: the leads to research NOW — each EITHER {id} (a stored lead) OR {keyword, why, score, sources} (a lead you originate AND pursue now). NONE may be already pursued.
(4) \`rename\`: [{id, keyword, why?}] — relabel a lead, keeping its id + history (optional).
(5) \`drop\`: [id, …] — eliminate a dead/duplicate lead; a MERGE = drop the duplicate AND rescore the survivor (optional).
(6) \`stop\`: {done, reason}. STOP
Goal mode: if the goal is already well answered AND the best remaining rabbit-hole adds only marginal value (a declining trajectory is strong evidence), set stop.done=true rather than chase diminishing returns.
The data above is enough to decide — work from it. You MAY consult a tool if it genuinely helps, but keep it brief and don't get lost; the answer does not require it. Your one required action is to return the StructuredOutput with EVERY required field present — never stop after a partial object."
`;

exports[`prompt builders > BRAINER_PROMPT/wN → full-string snapshot 1`] = `
"You are the BRAINER — you make every decision in this research run and set its direction.

How the run works: a scout seeded the first rabbit-holes and a prospector named the source venues; then you drive each wave. You hand rabbit-holes to parallel lane-researchers — fast workers that WebSearch + WebFetch the venues you assign, read the pages, and return findings + new rabbit-holes — then you update the running result, steer the next wave, and decide when to stop. On stop, a refinement stage adversarially checks your findings and writes the report.

The engine keeps the OPEN rabbit-holes as an id-keyed store and carries each one's score history natively — you NEVER re-emit the whole set. You return DELTAS against it.

Direction is two powers:
• LOOK UP rabbit-holes already in the store (by id) to research next.
• ORIGINATE — when the answer needs an angle, candidate, or sub-question no stored rabbit-hole covers, add it as a new directive {keyword, why, score} and a researcher will go collect it. Name a gap you can see rather than wait for one to surface; summon a candidate the scout missed — not padding. Put it in \`lookupNext\` to pursue NOW, or in \`add\` to PARK it for a later wave.

Before you decide, hunt for coverage GAPS — a candidate, sub-question, or angle the goal needs that no lane has touched — and probe them YOURSELF with WebSearch / WebFetch (as many as you need) to fill them; fold what you find into resultSoFar and ORIGINATE the missing leads into \`lookupNext\`. Beyond gap-filling, leave the heavy digging to the lane-researchers.

Wave 3. Query: "best vector database for production RAG at scale". RUBRIC
Scout landscape: L
RABBIT-HOLE STORE — open leads (\`#id [last score or "new"] keyword — why\`); re-score up or down, a low one can resurrect, every "new" lead you MUST score:
- #1 [80] x — y
ALREADY PURSUED — do not look up or re-originate these (research history):
- a
Findings this wave (from the researchers' page-reading):
- rabbitHole: x
  summary: s
TOP-PICK SCORE TRAJECTORY by wave (calibrated 0-100): - 90
- 70
- 50
A steadily declining trajectory means high-value rabbit-holes are drying up — read it as convergence.
SOURCE VENUES (from the prospector) — give each lookupNext pick the subset whose source fits its lane, in its \`sources\`, so its researcher searches the right places first:
- source: arXiv (site:arxiv.org)
  goodFor: ANN indexes
- source: SemiAnalysis
  goodFor: cost
For each lookupNext pick, also set \`sourceCount\`: how many sources its researcher should fetch, sized to what that lane needs.

RESULT SO FAR — the run's living MEMORY, carried wave to wave. Prior version:
answer: pgvector
confidence: medium
evidence:
  - fact: recall
    value: 0.98
    source: arxiv
    status: settled
resolved:
  - idx
openGaps:
  - mt
working: cost=x
Update and RETURN \`resultSoFar\` as the run's memory: refine \`answer\`; APPEND load-bearing \`evidence\` only (each {fact, value, source, status: settled|tentative|contested} — facts the answer rests on, NOT a transcript); move closed parts into \`resolved\`; keep \`openGaps\` current; record any \`tensions\` (conflicting sources); for build-the-answer / estimate questions grow the \`working\` derivation chain (else ''); set \`confidence\`.

Then return DELTAS against the store:
(1) \`rescore\`: [{id, score}] — ONLY the leads whose 0-100 score CHANGES this wave (score every "new" lead at least once); unlisted leads keep their last score. Score honestly per the rubric; a marginal lead scores low.
(2) \`add\`: [{keyword, why, score}] — NEW leads to PARK in the store for a later wave (the engine assigns each an id).
(3) \`lookupNext\`: the leads to research NOW — each EITHER {id} (a stored lead) OR {keyword, why, score, sources, sourceCount} (a lead you originate AND pursue now). NONE may be already pursued. Assign each its \`sources\` venue subset.
(4) \`rename\`: [{id, keyword, why?}] — relabel a lead, keeping its id + history (optional).
(5) \`drop\`: [id, …] — eliminate a dead/duplicate lead; a MERGE = drop the duplicate AND rescore the survivor (optional).
(6) \`stop\`: {done, reason}. STOP
Goal mode: if the goal is already well answered AND the best remaining rabbit-hole adds only marginal value (a declining trajectory is strong evidence), set stop.done=true rather than chase diminishing returns.
The data above is enough to decide — work from it. You MAY consult a tool if it genuinely helps, but keep it brief and don't get lost; the answer does not require it. Your one required action is to return the StructuredOutput with EVERY required field present — never stop after a partial object."
`;

exports[`prompt builders > COMPUTE_PROMPT → full-string snapshot 1`] = `
"You are a COMPUTE stage for: "best vector database for production RAG at scale". DERIVE the answer — do the actual calculation rather than restating facts.
This stage's goal: derive
Facts to compute from (the load-bearing facts the answer rests on — use these as the input numbers):
- fact: recall
  why: lb
  clean: 0.96 ± 0.02
The run's accumulated RESULT (the answer + the brainer's half-built \`working\` derivation to finish):
answer: pgvector
confidence: medium
evidence:
  - fact: recall
    value: 0.98
    source: arxiv
    status: settled
resolved:
  - idx
openGaps:
  - mt
working: cost=x
Carry the derivation out with rigor:
- FIRST fact-check your input numbers: verify each against a current primary source (WebSearch / WebFetch) and correct any that is stale, wrong, or imprecise before computing — a derivation is only as sound as its inputs;
- assemble the verified input numbers, with their units;
- when the calculation is non-trivial (unit conversions, a nearest-neighbor distance, Monte-Carlo error propagation), WRITE AND RUN actual code — load Bash + Write via ToolSearch if absent, run python or node — rather than doing arithmetic in your head; compute, do not estimate;
- propagate the input uncertainties into an explicit ± error range;
- then adversarially CHECK your own work: re-derive a second way or sanity-check against an anchor, and correct any unit / formula / arithmetic slip before reporting.
Return: value (the headline computed quantity, with units + error range); result (markdown: the inputs, the steps, the numbers, the self-check); script (the exact code you wrote AND ran, "" if none) with scriptLang; assumptions[]. Always finish by emitting the complete StructuredOutput with every required field — never stop after a partial object."
`;

exports[`prompt builders > DEBUG_PROMPT → full-string snapshot 1`] = `
"Aggregate and analyze this RR run's diagnostics for an engineer debugging the pipeline. Goal: "best vector database for production RAG at scale".
Walk it phase by phase — scout → prospector → each research wave → sentinel → finalize (initiate → refine → compute → aggregate) — reporting what happened at each with the actual numbers, plus anomalies, degraded/failed agents, or wasted effort to fix.
Prospector→researcher utilization (run this check): the prospector named these venues:
- source: arXiv (site:arxiv.org)
  goodFor: ANN indexes
- source: SemiAnalysis
  goodFor: cost
Each lane in laneRecords carries the \`assignedVenues\` the brainer gave it; from that lane's summary + rabbitHoles, judge whether the researcher actually drew on those venues. Report per-lane used / not-used and the overall % of lanes that used their assigned venues.
Then answer this run-specific question directly: why?
Metrics:
a: 1
Lane records (wave, keyword, assignedVenues, summary, rabbitHoles):

Per-wave log:
- wave: 0
  topScore: 0
  done: false
  reason: seed
Sentinel log:

Per-wave result-so-far log (the brainer's running memory each wave):

Return diagnosis (markdown).
The data above is enough to decide — work from it. You MAY consult a tool if it genuinely helps, but keep it brief and don't get lost; the answer does not require it. Your one required action is to return the StructuredOutput with EVERY required field present — never stop after a partial object."
`;

exports[`prompt builders > INITIATOR_PROMPT → full-string snapshot 1`] = `
"You direct the FINALIZE phase for: "best vector database for production RAG at scale". The research is done; below is everything it gathered. Shape the finishing pipeline to fit THIS query, then return the plan.
The finish has three stages, and you set how each runs:
1. REFINEMENT (always) — one refine agent per fact adversarially fact-checks each load-bearing fact and returns its corrected, hardened claim. You name WHICH facts to harden.
2. COMPUTEMENT — OFF for this run (launched with compute disabled); it will not run regardless of what you return here.
3. AGGREGATION (always) — writes the final report from the hardened facts (and the derivation, if any). You give it a focus note.
The run's accumulated RESULT (the brainer's living memory — answer, the \`working\` derivation, evidence, gaps, tensions):
answer: pgvector
confidence: medium
evidence:
  - fact: recall
    value: 0.98
    source: arxiv
    status: settled
resolved:
  - idx
openGaps:
  - mt
working: cost=x
Per-wave log:
- wave: 0
  topScore: 0
  done: false
  reason: seed
Scout landscape: L
Top open rabbit-holes left unpursued:
- x
Return:
- refinement.facts[] — the load-bearing facts to harden (each {fact, why}); NO cap, name every fact that would change the answer if wrong, skip soft restatements.
- computement — return {run: false, stages: []} (computement is OFF for this run).
- aggregator.focus — one note on what the report must emphasize / the shape the answer should take.
The data above is enough to decide — work from it. You MAY consult a tool if it genuinely helps, but keep it brief and don't get lost; the answer does not require it. Your one required action is to return the StructuredOutput with EVERY required field present — never stop after a partial object."
`;

exports[`prompt builders > PROSPECTOR_PROMPT → full-string snapshot 1`] = `
"Goal: "best vector database for production RAG at scale". Scout landscape: L
Sources the scout already opened:
- https://a.com
Name the 6-8 highest-value, authoritative source venues for THIS goal — where primary, expert, or rigorous information on the topic actually lives. The right set is domain-specific (GPU serving → arXiv/USENIX/MLSys/SemiAnalysis/r/LocalLLaMA; a stock → SEC EDGAR/earnings calls/Bloomberg; weather → NOAA/ECMWF).
Span what is relevant here: primary research (papers/preprints + where they live for this field), official docs, standards bodies/regulators, authoritative datasets/benchmarks, deep practitioner/industry analysis, high-signal community venues. Exclude generic SEO blogs.
For each: source (venue + how to reach/search it, e.g. "arXiv (site:arxiv.org)") and goodFor (the sub-questions it is best for — specific enough for the downstream brainer to match each research lane to the right venue).
Run WebSearch (one or more queries) to discover and verify the actual highest-value venues for THIS topic — confirm each exists and is authoritative (memory alone misses recent venues). Return highValueSources (6-8) and a brief reasoning naming what you searched.
Use the WEB only (WebSearch/WebFetch) to check sources — never read local files or this repository's own code; they are not evidence."
`;

exports[`prompt builders > REFINE_PROMPT → full-string snapshot 1`] = `
"Fact-check and HARDEN this load-bearing fact for the goal "best vector database for production RAG at scale". NET-FRAGMENT
Fact: F
Why it is load-bearing: W
First verify it adversarially: hunt counter-evidence, newer information, and the REAL numbers — actively look for where it is false, outdated, or imprecise. Do not rubber-stamp a well-supported fact; do not manufacture doubt about one you cannot actually break. Then settle every doubt against the sources and return ONLY the clean, corrected claim(s) — the right values, current and verified, dropping anything that does not hold. Cite sources inline.
Return report (markdown): the clean / corrected claim(s) for this fact, hardened against the sources.
Use the WEB only (WebSearch/WebFetch) to check sources — never read local files or this repository's own code; they are not evidence."
`;

exports[`prompt builders > RESEARCHER_PROMPT → full-string snapshot 1`] = `
"Pursue ONE rabbit-hole. NET-FRAGMENT
TOP GOAL: "best vector database for production RAG at scale".
TRAIL that led here (top goal → … → this rabbit-hole): goal  →  x.
Now investigating: "x" (why it matters: w). Use the trail to judge which next source advances the TOP goal, not just this sub-topic.
Search these high-value venues for this lane first: arXiv (site:arxiv.org) (ANN indexes); SemiAnalysis (cost).
Run a targeted WebSearch, pick the best 3 sources, and WebFetch each in parallel. In each WebFetch prompt, first ask the key question about this rabbit-hole, then append: <<FOOTER-FRAGMENT>>
If a source is dead, parked, or returns nothing (e.g. a 410 or an empty JS-rendered page), note it in deadEnds and move to another source. If EVERY source is dead, that is still a valid result: return summary noting the dead ends, rabbitHoles [], and the dead sources in deadEnds — never fail to return.
If a fetched source turns out OFF-GOAL — it does not advance the TOP goal even if it sits on the sub-topic — do not discard it and do not stop: open one or more ADDITIONAL sources to reach goal-aligned data, and return BOTH the off-goal find and the new ones. You MAY exceed the 3-source count for this — gather it and let the brainer decide relevance.
Return: summary (2-4 sentences of what you found); rabbitHoles (new rabbit-holes from the footer, {keyword, why}); deadEnds."
`;

exports[`prompt builders > SCOUT_PROMPT → full-string snapshot 1`] = `
"Scout the web landscape for: "best vector database for production RAG at scale". NET-FRAGMENT
Step 1 — run ONE broad WebSearch to map the landscape and collect candidate sources (URLs).
Step 2 — pick the up-to-5 most relevant sources and WebFetch each. In every WebFetch prompt, first ask "What are the key facts on this page about: best vector database for production RAG at scale?", then append this exact instruction: <<FOOTER-FRAGMENT>>
Step 3 — return: landscape (one paragraph); pages[] (each: url, 2-3 sentence summary, rabbitHoles[] copied from the page's "Rabbit holes" section as {keyword, why}); deadEnds[] for any source that timed out, was parked, or was off-topic — do not invent rabbit-holes for those. If every source is dead/unreachable, still return a valid result (landscape from your search, pages [], the dead sources in deadEnds) — never fail to return."
`;

exports[`prompt builders > SENTINEL_PROMPT → full-string snapshot 1`] = `
"The brainer just declared the crawl DONE for: "best vector database for production RAG at scale". Contest it from the brainer's current answer + the open rabbit-holes: is stopping here solid, or did the brainer stop prematurely / miss a load-bearing gap?
Brainer's result so far (its current answer + evidence + open gaps):
answer: pgvector
confidence: medium
evidence:
  - fact: recall
    value: 0.98
    source: arxiv
    status: settled
resolved:
  - idx
openGaps:
  - mt
working: cost=x
Reason it called done: done
Per-wave log (what each wave pursued + where the answer stood):
- wave: 0
  topScore: 0
  done: false
  reason: seed
Open rabbit-holes not yet pursued (\`#id [score] keyword — why\`):
- #1 [80] x — y
Already pursued — do not propose any of these:
- a
HIGH BAR: uphold the brainer (solid=true) unless a load-bearing gap would materially change or undermine the answer — "more detail is possible" is not a reason to continue.
If not solid: solid=false plus rabbitHoles (1-3 high-priority gap searches not already pursued, injected at the top of the store for the lane researchers). If solid: solid=true, empty rabbitHoles.
Return solid (bool), reasoning, rabbitHoles.
The data above is enough to decide — work from it. You MAY consult a tool if it genuinely helps, but keep it brief and don't get lost; the answer does not require it. Your one required action is to return the StructuredOutput with EVERY required field present — never stop after a partial object."
`;
